Alignment Fix!
It was a 'content' vs 'context' typo the whole time.

--- a/Styles/style.css
+++ b/Styles/style.css
@@ -9,18 +9,21 @@ body {
 .content-block {
   display: flex;
   align-items: flex-start;
+  justify-content: flex-start;
   margin-bottom: 2rem;
 }
 
 .content-block .images {
   display: flex;
   flex-direction: column;
-  gap: 0.5rem;
+  gap: 2rem;
+  text-align: left;
+  margin-right: 7rem
 }
 
 .content-block .images img {
   display: block;
-  width: 420px;
+  width: 650px;
   height: auto;
   /* margin-bottom: 0.5rem; */
   float: none;
@@ -32,9 +35,10 @@ body {
   margin-bottom: 1rem;
 } */
 
-.context-block .text {
+.content-block .text {
   flex: 1;
   margin-right: 1.5rem;
+  text-align: left;
 }
 
 p {
